; ModuleID = '/home/carl/AnghaBench/linux/net/nfc/extr_digital_technology.c_digital_tg_config_nfca.c'
source_filename = "/home/carl/AnghaBench/linux/net/nfc/extr_digital_technology.c_digital_tg_config_nfca.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nfc_digital_dev = type { i32 }

@NFC_DIGITAL_CONFIG_RF_TECH = common dso_local global i32 0, align 4
@NFC_DIGITAL_RF_TECH_106A = common dso_local global i32 0, align 4
@NFC_DIGITAL_CONFIG_FRAMING = common dso_local global i32 0, align 4
@NFC_DIGITAL_FRAMING_NFCA_NFC_DEP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nfc_digital_dev*)* @digital_tg_config_nfca to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @digital_tg_config_nfca(%struct.nfc_digital_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.nfc_digital_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.nfc_digital_dev* %0, %struct.nfc_digital_dev** %3, align 8
  %5 = load %struct.nfc_digital_dev*, %struct.nfc_digital_dev** %3, align 8
  %6 = load i32, i32* @NFC_DIGITAL_CONFIG_RF_TECH, align 4
  %7 = load i32, i32* @NFC_DIGITAL_RF_TECH_106A, align 4
  %8 = call i32 @digital_tg_configure_hw(%struct.nfc_digital_dev* %5, i32 %6, i32 %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  store i32 %12, i32* %2, align 4
  br label %18

13:                                               ; preds = %1
  %14 = load %struct.nfc_digital_dev*, %struct.nfc_digital_dev** %3, align 8
  %15 = load i32, i32* @NFC_DIGITAL_CONFIG_FRAMING, align 4
  %16 = load i32, i32* @NFC_DIGITAL_FRAMING_NFCA_NFC_DEP, align 4
  %17 = call i32 @digital_tg_configure_hw(%struct.nfc_digital_dev* %14, i32 %15, i32 %16)
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %13, %11
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}

declare dso_local i32 @digital_tg_configure_hw(%struct.nfc_digital_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
